fix: increase contrast of visual items

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,6 +72,6 @@
   }
 
   .button {
-    @apply text-black-500 dark:text-white-500 bg-green-100 dark:bg-green-700 mr-4 mb-2 px-8 py-2 rounded-xl no-underline hover:bg-green-200 dark:hover:bg-green-800 flex items-center justify-center text-xl mt-5 tablet:w-1/3 !important;
+    @apply text-green-900 dark:text-white-500 bg-green-300 border-2 border-green-900 dark:bg-green-700 mr-4 mb-2 px-8 py-2 rounded-xl no-underline hover:bg-green-200 dark:hover:bg-green-800 flex items-center justify-center text-xl mt-5 tablet:w-1/3 !important;
   }
 }
